0.13.2.AH (Pre-Release):
-----------------------
- Fixes Switching External Screens to Text Mode
  * External screens switched to text mode were functional but elements, such as the header, were missing
  * This has now been fixed along with properly disabling the cursor
- Fixes Hang on Runtime Pauses
  * RefindPlus hung on runtime pauses initiated before the main menu was loaded
  * This was due to an absence of the Event Waitlist in such situations
  * The Waitlist is now always generated on runtime pauses if not present
- Fixes Static 'PreviousBoot' Setup
  * The actually booted loader was not recorded if an tool had been run beforehand
  * Such previously set tool could only be changed by manually deleting the NVRAM entry
  * The intented outcome of having a static setup could not be realised as envisaged
  * This bug was introduced in v0.13.2.AG (Commit add53ba)
- Fixes Failure to set 'PreviousBoot' on Text Mode Boots
  * The 'PreviousBoot' variable was not saved when running loaders in text mode
  * This bug was introduced in v0.13.2.AA (Commit 74d70fb) and exposed in v0.13.2.AG (Commit 4590047)
- Fixes Graphics Mode Selection in Multi-GPU Setups
  * When more than one GPU is present, RefindPlus always tried to use the GOP instance from the last processed GPU
  * Thhe GPU with a GOP instance having the highest resolution is now selected instead (as intended)
  * NB: RefindPlus does not check whether a GPU is actually connected to a display
  *     Hence, a blank display will result if the highest resolution GPU is not connected
  * This bug was introduced in v0.12.0.AN (Commit 62e6fe8)
- Improves Keystroke Flushing
  * Device errors are returned when attempting to read keystrokes under some conditions
  * This appears to typically only happen on UEFI PC
  * RefindPlus now further attempts to ensure the read takes place and/or mitigate the impact
- Improves APFS Volume Role Identification